[package]
name = "structx_test"
version = "0.1.10"
authors = ["oooutlk <oooutlk@outlook.com>"]
edition = "2021"
publish = false

[dependencies]
structx = { path = "../structx", version = "0.1.10" }
lens-rs = { version = "0.3", features = ["structx"], optional = true }
serde_json = { version = "^1.0", optional = true }

[build-dependencies]
inwelling = "0.5"

[package.metadata.inwelling]
structx = true
lens-rs_generator = true

[features]
default = ["serde"]

lens = ["lens-rs", "structx/lens-rs"]
serde = ["serde_json", "structx/serde"]
